@@ -31,6 +31,7 @@ Erik Slagter <erik@slagter.name>
 Andreas Wehrmann <a.wehrmann@centersystems.com>
 Eivind Sarto <ivan@espial.com>
 Thomas Stalder <gnunet@netsolux.ch>
+Zhimin Huang <zhimin.huang@bqvision.com>
 
 Documentation contributions also came from:
 Marco Maggi <marco.maggi-ipsu@poste.it>
